[package]
name = "rir_ipaddress_and_asn_rust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.23"
ipnetwork = "0.20.0"
url = "2.5.0"
csv = "1.3.0"

#[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "target-feature=+crt-static"]

[[bin]]
name = "app1" # 先下载文件到本地电脑
path = "src/多线程下载文件.rs"
target = "x86_64-pc-windows-msvc"

[[bin]]
name = "app2" # 然后解析文件
path = "src/main.rs"
target = "x86_64-pc-windows-msvc"